-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: hotspot
-
b24
-
x86_64
-
linux
-
Verified
The test failed with following error message:
# Internal Error /open/src/hotspot/share/code/compiledMethod.cpp:508), pid=10579, tid=10593
# assert(ic->is_clean()) failed: nmethod 0x00007fb02833e190not clean compiler.c2.cr6646020.Tester.main([Ljava/lang/String;)V
# Internal Error /open/src/hotspot/share/code/compiledMethod.cpp:508), pid=10579, tid=10593
# assert(ic->is_clean()) failed: nmethod 0x00007fb02833e190not clean compiler.c2.cr6646020.Tester.main([Ljava/lang/String;)V
- relates to
-
JDK-8212681 Refactor IC locking to use a fine grained CompiledICLocker
-
- Resolved
-
-
JDK-8323065 Unneccesary CodeBlob lookup in CompiledIC::internal_set_ic_destination
-
- Resolved
-