8214257: IC cache not clean after cleaning assertion failure

Reviewed-by: kvn, thartmann